# cqcppsdk-template

./: .gitignore  CMakeLists.txt  README.md  app.json  appveyor.yml
scripts/: install.example.ps1
src/: demo.cpp
